--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,10 @@ current_version = 0.0.1
 commit = True
 tag = True
 
+[bumpversion:file:VERSION.txt]
+search = '{current_version}'
+replace = '{new_version}'
+
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
