fix flake8 issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,4 +20,7 @@ universal = 1
 
 [flake8]
 exclude = docs
+# E501: line too long (doesn't ignore docstrings)
+# W503: line break before binary operator (obsolete)
+ignore = E501,W503
 
