--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py37, py38
-; envlist = py37, py38, flake8
+; envlist = py37, py38
+envlist = py37, py38, flake8
 
 [travis]
 python =
