update configuration files

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ universal = 1
 
 [flake8]
 exclude = docs
+# E203: #whitespace before ':' (black compatibility)
+# W503: line break before binary operator (black compatibility)
 # E501: line too long (doesn't ignore docstrings)
-# W503: line break before binary operator (obsolete)
-ignore = E501,W503
-
+extend-ignore = E203,W503,E501
