--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,12 @@
-pip==19.2.3
-bump2version==0.5.11
-wheel==0.33.6
-watchdog==0.9.0
-flake8==3.7.8
-tox==3.14.0
-coverage==4.5.4
-Sphinx==1.8.5
-twine==1.14.0
-
-pytest==4.6.5
+Sphinx==3.3.1
+black==20.8b1
+bump2version==1.0.1
+coverage==5.3
+flake8==3.8.4
+ipdb==0.13.4
+isort==5.6.4
+mypy==0.790
+pytest==6.1.2
+tox==3.20.1
+twine==3.2.0
+watchdog==0.10.3
