--- a/envs_yaml/env_minigrid_empty.yaml
+++ b/envs_yaml/env_minigrid_empty.yaml
@@ -28,7 +28,7 @@ reward:
     reward_off: 0.0
 
 observation:
-  name: full_visibility
+  name: full_observation
 
 terminating:
   name: reach_goal
