add mypy to setup.cfg and tox.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,6 @@ exclude = docs
 # W503: line break before binary operator (black compatibility)
 # E501: line too long (doesn't ignore docstrings)
 extend-ignore = E203,W503,E501
+
+[mypy-numpy.*,gym.*,yamale.*]
+ignore_missing_imports = True
