--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,15 @@
 [tox]
-envlist = py37, py38, flake8, black
+envlist = py37, py38, flake8, black, mypy
 
 [travis]
 python =
     3.8: py38
     3.7: py37
+
+[testenv:mypy]
+basepython = python
+deps = mypy
+commands = mypy gym_gridverse tests
 
 [testenv:black]
 basepython = python
