fix mypy dependency

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,9 @@ python =
 
 [testenv:mypy]
 basepython = python
-deps = mypy
+deps =
+    mypy
+    pytest
 commands = mypy gym_gridverse tests
 
 [testenv:black]
