change YAML schema system

--- a/tox.ini
+++ b/tox.ini
@@ -26,9 +26,8 @@ commands = flake8 gym_gridverse tests
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+; necessary to fix pyglet display issue
     DISPLAY = :0
-; DISPLAY = :0
-; export DISPLAY=localhost:0.0 
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
