--- a/yaml/env_minigrid_door_key.yaml
+++ b/yaml/env_minigrid_door_key.yaml
@@ -1,21 +1,22 @@
 state_space:
   shape: [ 10, 10 ]
-  objects: [ Wall, Floor, Goal ]
-  colors: [ NONE ]
+  objects: [ Wall, Floor, Goal, Door, Key ]
+  colors: [ NONE, YELLOW ]
 
 observation_space:
   shape: [ 7, 7 ]
-  objects: [ Wall, Floor, Goal ]
-  colors: [ NONE ]
+  objects: [ Wall, Floor, Goal, Door, Key ]
+  colors: [ NONE, YELLOW ]
 
-reset:
-  name: minigrid_empty
-  random_agent: True
+reset_function:
+  name: minigrid_door_key
 
-transition:
+transition_functions:
   - name: update_agent
+  - name: actuate_mechanics
+  - name: pickup_mechanics
 
-reward:
+reward_functions:
   - name: living_reward
     reward: -0.01
   - name: getting_closer
@@ -27,8 +28,8 @@ reward:
     reward_on: 5.0
     reward_off: 0.0
 
-observation:
+observation_function:
   name: full_observation
 
-terminating:
+terminating_function:
   name: reach_goal
