--- a/yaml/env_minigrid_dynamic_obstacles_16x16_random.v0.yaml
+++ b/yaml/env_minigrid_dynamic_obstacles_16x16_random.v0.yaml
@@ -8,16 +8,16 @@ observation_space:
   objects: [ Wall, Floor, Goal, MovingObstacle ]
   colors: [ NONE ]
 
-reset:
+reset_function:
   name: minigrid_dynamic_obstacles
   num_obstacles: 8
   random_agent: True
 
-transition:
+transition_functions:
   - name: update_agent
   - name: step_objects
 
-reward:
+reward_functions:
   - name: reach_goal
     reward_on: 1.0
     reward_off: 0.0
@@ -26,10 +26,10 @@ reward:
   - name: bump_into_wall
     reward: -1.0
 
-observation:
+observation_function:
   name: full_observation
 
-terminating:
+terminating_function:
   name: chain_any
   terminating_functions:
     - name: reach_goal
