--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,9 @@ commands = flake8 gym_gridverse tests
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+    DISPLAY = :0
+; DISPLAY = :0
+; export DISPLAY=localhost:0.0 
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
