--- a/yaml/env_minigrid_dynamic_obstacles_16x16_random.v0.yaml
+++ b/yaml/env_minigrid_dynamic_obstacles_16x16_random.v0.yaml
@@ -15,7 +15,7 @@ reset_function:
 
 transition_functions:
   - name: update_agent
-  - name: step_objects
+  - name: step_moving_obstacles
 
 reward_functions:
   - name: reach_goal
