remove GridObject.actuate methods

--- a/yaml/env_minigrid_door_key.yaml
+++ b/yaml/env_minigrid_door_key.yaml
@@ -13,7 +13,7 @@ reset_function:
 
 transition_functions:
   - name: update_agent
-  - name: actuate_mechanics
+  - name: actuate_door
   - name: pickup_mechanics
 
 reward_functions:
