--- a/yaml/env_minigrid_keydoor.yaml
+++ b/yaml/env_minigrid_keydoor.yaml
@@ -9,7 +9,7 @@ observation_space:
   colors: [ NONE, YELLOW ]
 
 reset_function:
-  name: minigrid_door_key
+  name: minigrid_keydoor
 
 transition_functions:
   - name: update_agent
