--- a/setup.cfg
+++ b/setup.cfg
@@ -25,5 +25,5 @@ exclude = docs
 # E501: line too long (doesn't ignore docstrings)
 extend-ignore = E203,W503,E501
 
-[mypy-numpy.*,gym.*,pyglet.*,schema.*]
+[mypy-numpy.*,gym.*,pyglet.*,schema.*,cached_property.*]
 ignore_missing_imports = True
