--- a/yaml/gv_dynamic_obstacles.5x5.yaml
+++ b/yaml/gv_dynamic_obstacles.5x5.yaml
@@ -1,7 +1,15 @@
 state_space:
-  shape: [ 18, 18 ]
+  shape: [ 5, 5 ]
   objects: [ Wall, Floor, Goal, MovingObstacle ]
   colors: [ NONE ]
+
+action_space:
+  - MOVE_FORWARD
+  - MOVE_BACKWARD
+  - MOVE_LEFT
+  - MOVE_RIGHT
+  - TURN_LEFT
+  - TURN_RIGHT
 
 observation_space:
   shape: [ 7, 7 ]
@@ -10,8 +18,8 @@ observation_space:
 
 reset_function:
   name: minigrid_dynamic_obstacles
-  num_obstacles: 8
-  random_agent: True
+  num_obstacles: 1
+  random_agent: False
 
 transition_functions:
   - name: update_agent
@@ -19,12 +27,19 @@ transition_functions:
 
 reward_functions:
   - name: reach_goal
-    reward_on: 1.0
+    reward_on: 5.0
     reward_off: 0.0
   - name: bump_moving_obstacle
     reward: -1.0
   - name: bump_into_wall
     reward: -1.0
+  - name: getting_closer
+    distance_function: manhattan
+    object_type: Goal
+    reward_closer: 0.2
+    reward_further: -0.2
+  - name: living_reward
+    reward: -0.05
 
 observation_function:
   name: full_observation
