--- a/yaml/gv_empty.8x8.yaml
+++ b/yaml/gv_empty.8x8.yaml
@@ -1,7 +1,15 @@
 state_space:
-  shape: [ 11, 11 ]
+  shape: [ 8, 8 ]
   objects: [ Wall, Floor, Goal ]
   colors: [ NONE ]
+
+action_space:
+  - MOVE_FORWARD
+  - MOVE_BACKWARD
+  - MOVE_LEFT
+  - MOVE_RIGHT
+  - TURN_LEFT
+  - TURN_RIGHT
 
 observation_space:
   shape: [ 7, 7 ]
@@ -9,23 +17,23 @@ observation_space:
   colors: [ NONE ]
 
 reset_function:
-  name: minigrid_rooms
-  layout: [ 2, 2 ]
+  name: minigrid_empty
+  random_agent: True
 
 transition_functions:
   - name: update_agent
 
 reward_functions:
-  - name: living_reward
-    reward: -0.01
-  - name: getting_closer
-    distance_function: manhattan
-    object_type: Goal
-    reward_closer: 0.1
-    reward_further: -0.1
   - name: reach_goal
     reward_on: 5.0
     reward_off: 0.0
+  - name: getting_closer
+    distance_function: manhattan
+    object_type: Goal
+    reward_closer: 0.2
+    reward_further: -0.2
+  - name: living_reward
+    reward: -0.05
 
 observation_function:
   name: full_observation
