--- a/yaml/gv_dynamic_obstacles.7x7.yaml
+++ b/yaml/gv_dynamic_obstacles.7x7.yaml
@@ -45,7 +45,7 @@ observation_function:
   name: full_observation
 
 terminating_function:
-  name: chain_any
+  name: reduce_any
   terminating_functions:
     - name: reach_goal
     - name: bump_moving_obstacle
