--- a/yaml/gv_dynamic_obstacles.7x7.yaml
+++ b/yaml/gv_dynamic_obstacles.7x7.yaml
@@ -1,6 +1,6 @@
 state_space:
   shape: [ 7, 7 ]
-  objects: [ Wall, Floor, Goal, MovingObstacle ]
+  objects: [ Wall, Floor, Exit, MovingObstacle ]
   colors: [ NONE ]
 
 action_space:
@@ -13,7 +13,7 @@ action_space:
 
 observation_space:
   shape: [ 7, 7 ]
-  objects: [ Wall, Floor, Goal, MovingObstacle ]
+  objects: [ Wall, Floor, Exit, MovingObstacle ]
   colors: [ NONE ]
 
 reset_function:
@@ -26,7 +26,7 @@ transition_functions:
   - name: step_moving_obstacles
 
 reward_functions:
-  - name: reach_goal
+  - name: reach_exit
     reward_on: 5.0
     reward_off: 0.0
   - name: bump_moving_obstacle
@@ -35,7 +35,7 @@ reward_functions:
     reward: -1.0
   - name: getting_closer
     distance_function: manhattan
-    object_type: Goal
+    object_type: Exit
     reward_closer: 0.2
     reward_further: -0.2
   - name: living_reward
@@ -47,6 +47,6 @@ observation_function:
 terminating_function:
   name: reduce_any
   terminating_functions:
-    - name: reach_goal
+    - name: reach_exit
     - name: bump_moving_obstacle
     - name: bump_into_wall
