--- a/yaml/gv_teleport.7x7.yaml
+++ b/yaml/gv_teleport.7x7.yaml
@@ -1,6 +1,6 @@
 state_space:
   shape: [ 7, 7 ]
-  objects: [ Wall, Floor, Goal, Telepod ]
+  objects: [ Wall, Floor, Exit, Telepod ]
   colors: [ NONE, RED ]
 
 action_space:
@@ -13,7 +13,7 @@ action_space:
 
 observation_space:
   shape: [ 7, 7 ]
-  objects: [ Wall, Floor, Goal, Telepod ]
+  objects: [ Wall, Floor, Exit, Telepod ]
   colors: [ NONE, RED ]
 
 reset_function:
@@ -25,12 +25,12 @@ transition_functions:
   - name: step_telepod
 
 reward_functions:
-  - name: reach_goal
+  - name: reach_exit
     reward_on: 5.0
     reward_off: 0.0
   - name: getting_closer
     distance_function: manhattan
-    object_type: Goal
+    object_type: Exit
     reward_closer: 0.2
     reward_further: -0.2
   - name: living_reward
@@ -40,4 +40,4 @@ observation_function:
   name: full_observation
 
 terminating_function:
-  name: reach_goal
+  name: reach_exit
