change full_observation to partial_observation in given yaml files

--- a/yaml/gv_memory.5x5.yaml
+++ b/yaml/gv_memory.5x5.yaml
@@ -31,7 +31,7 @@ reward_functions:
     reward: -0.05
 
 observation_function:
-  name: full_observation
+  name: partial_observation
 
 terminating_function:
   name: reach_exit
