--- a/yaml/gv_dynamic_obstacles.7x7.yaml
+++ b/yaml/gv_dynamic_obstacles.7x7.yaml
@@ -42,7 +42,7 @@ reward_functions:
     reward: -0.05
 
 observation_function:
-  name: full_observation
+  name: partial_observation
 
 terminating_function:
   name: reduce_any
