update test coverage
- add coverage options
- added tests to improve coverage
- add to do notes in source where coverage is lacking

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,31 @@ extend-ignore = E203,W503,E501
 
 [mypy-numpy.*,gym.*,pyglet.*,schema.*,cached_property.*,imageio.*,more_itertools.*]
 ignore_missing_imports = True
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+omit = gym_gridverse/recording.py
+
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain about defensive coding
+    raise NotImplementedError
+    raise TypeError
+    return NotImplemented
+    assert False
+
+    def __repr__\(
+
+    # Don't complain about code placeholders
+    \.\.\.
+
+    # Don't complain if non-runnable code isn't run:
+    if __name__ == .__main__.:
+
+    # Don't complain about abstract methods, they aren't run:
+    @(abc\.)?abstractmethod
