--- a/yaml/gv_teleport.5x5.yaml
+++ b/yaml/gv_teleport.5x5.yaml
@@ -11,7 +11,6 @@ action_space:
   - TURN_RIGHT
 
 observation_space:
-  shape: [ 7, 7 ]
   objects: [ Wall, Floor, Exit, Telepod ]
   colors: [ NONE, RED ]
 
@@ -37,7 +36,8 @@ reward_functions:
     reward: -0.05
 
 observation_function:
-  name: partial_observation
+  name: partially_occluded
+  area: [ [ -6, 0 ], [-3, 3 ] ]
 
 terminating_function:
   name: reach_exit
