--- a/yaml/gv_custom.8x8.yaml
+++ b/yaml/gv_custom.8x8.yaml
@@ -11,7 +11,6 @@ action_space:
   - TURN_RIGHT
 
 observation_space:
-  shape: [ 7, 7 ]
   objects: [ Wall, Floor, Exit ]
   colors: [ NONE ]
 
@@ -29,7 +28,8 @@ reward_functions:
     reward_odd: -2.0
 
 observation_function:
-  name: partial_observation
+  name: partially_occluded
+  area: [ [ -6, 0 ], [-3, 3 ] ]
 
 terminating_function:
   name: reach_exit
