add github-actions testing config

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist = py37, py38, flake8, black, mypy
 
-[travis]
+[gh-actions]
 python =
-    3.8: py38
     3.7: py37
+    3.8: py38
 
 [testenv:mypy]
 basepython = python
