--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,6 +9,7 @@ mypy==0.910
 pytest==6.2.5
 sphinx-theme==1.0
 tox==3.24.4
+tox-gh-actions==2.8.1
 twine==3.2.0
 watchdog==0.10.3
 sphinxcontrib-napoleon==0.7
