--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,8 +1,12 @@
 name: Python package
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   test:
@@ -21,6 +25,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements_dev.txt
-        python -m pip install .
     - name: Test with tox
       run: tox
