--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = py37, py38, flake8, black, mypy
+envlist = py37, py38, py39, py310, flake8, black, mypy
 
 [gh-actions]
 python =
     3.7: py37
     3.8: py38
+    3.9: py39
+    3.10: py310
 
 [testenv:mypy]
 basepython = python
