remove `termcolor` requirement

--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,7 @@ setenv =
     DISPLAY = :0
 deps =
     -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
 commands =
-    python -m pip install -U pip
+    python -m pip install --upgrade pip
     pytest --basetemp={envtmpdir}
 
