add scripts to tox tests

--- a/tox.ini
+++ b/tox.ini
@@ -13,17 +13,17 @@ basepython = python
 deps =
     mypy
     pytest
-commands = mypy gym_gridverse tests
+commands = mypy gym_gridverse tests scripts
 
 [testenv:black]
 basepython = python
 deps = black
-commands = black --check --diff gym_gridverse tests
+commands = black --check --diff gym_gridverse tests scripts
 
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 gym_gridverse tests
+commands = flake8 gym_gridverse tests scripts
 
 [testenv]
 setenv =
