add tox:isort and update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37, py38, py39, py310, flake8, black, mypy
+envlist = py37, py38, py39, py310, flake8, mypy, isort, black
 
 [gh-actions]
 python =
@@ -7,23 +7,6 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
-
-[testenv:mypy]
-basepython = python
-deps =
-    mypy
-    pytest
-commands = mypy gym_gridverse tests scripts
-
-[testenv:black]
-basepython = python
-deps = black
-commands = black --check --diff gym_gridverse tests scripts
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 gym_gridverse tests scripts
 
 [testenv]
 setenv =
@@ -35,4 +18,22 @@ deps =
 commands =
     python -m pip install --upgrade pip
     pytest --basetemp={envtmpdir}
+
+[testenv:flake8]
+commands =
+    flake8 gym_gridverse tests scripts
+
+[testenv:mypy]
+commands =
+    python -m pip install --upgrade pip
+    mypy --install-types --non-interactive
+    mypy gym_gridverse tests scripts
+
+[testenv:isort]
+commands =
+    isort --check --diff gym_gridverse tests scripts
+
+[testenv:black]
+commands =
+    black --check --diff gym_gridverse tests scripts
 
