in mypy, ignore all missing imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ exclude = docs
 # E501: line too long (doesn't ignore docstrings)
 extend-ignore = E203,W503,E501
 
-[mypy-numpy.*,gym.*,pyglet.*,schema.*,cached_property.*,imageio.*,more_itertools.*]
+[mypy]
 ignore_missing_imports = True
 
 [coverage:run]
