update and cleanup requirements + tox + github actions

--- a/tox.ini
+++ b/tox.ini
@@ -11,29 +11,24 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-; necessary to fix pyglet display issue
+; fixes pyglet display issue
     DISPLAY = :0
-deps =
-    -r{toxinidir}/requirements_dev.txt
-commands =
-    python -m pip install --upgrade pip
-    pytest --basetemp={envtmpdir}
+deps = pytest
+commands = pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-commands =
-    flake8 gym_gridverse tests scripts
+deps = flake8
+commands = flake8 gym_gridverse tests scripts
 
 [testenv:mypy]
-commands =
-    python -m pip install --upgrade pip
-    mypy --install-types --non-interactive
-    mypy gym_gridverse tests scripts
+deps = mypy
+commands = mypy gym_gridverse tests scripts
 
 [testenv:isort]
-commands =
-    isort --check --diff gym_gridverse tests scripts
+deps = isort
+commands = isort --check --diff gym_gridverse tests scripts
 
 [testenv:black]
-commands =
-    black --check --diff gym_gridverse tests scripts
+deps = black
+commands = black --check --diff gym_gridverse tests scripts
 
