--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: Build
 
 on:
   push:
@@ -9,6 +9,24 @@ on:
       - master
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    env:
+      PYTHON_VERSION: 3.10
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${PYTHON_VERSION}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${PYTHON_VERSION}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox tox-gh-actions
+    - name: Lint with tox
+      run: tox -e flake8,isort,black
+
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -24,6 +42,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements_dev.txt
+        python -m pip install tox tox-gh-actions
     - name: Test with tox
       run: tox
