--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,14 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     env:
-      PYTHON_VERSION: 3.10
+      python-version: "3.10"
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${PYTHON_VERSION}
+    - name: Set up Python ${{ env.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${PYTHON_VERSION}
+        python-version: ${{ env.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
