update tox targets to include examples/ and add format target to Makefile

--- a/tox.ini
+++ b/tox.ini
@@ -18,17 +18,17 @@ commands = pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
 deps = flake8
-commands = flake8 gym_gridverse tests scripts
+commands = flake8 gym_gridverse tests scripts examples
 
 [testenv:mypy]
 deps = mypy
-commands = mypy gym_gridverse tests scripts
+commands = mypy gym_gridverse tests scripts examples
 
 [testenv:isort]
 deps = isort
-commands = isort --check --diff gym_gridverse tests scripts
+commands = isort --check --diff gym_gridverse tests scripts examples
 
 [testenv:black]
 deps = black
-commands = black --check --diff gym_gridverse tests scripts
+commands = black --check --diff gym_gridverse tests scripts examples
 
