--- a/.registered_environments/gv_teleport.5x5.yaml
+++ b/.registered_environments/gv_teleport.5x5.yaml
@@ -20,8 +20,9 @@ reset_function:
   random_agent: True
 
 transition_functions:
-  - name: update_agent
-  - name: step_telepod
+  - name: move_agent
+  - name: turn_agent
+  - name: teleport
 
 reward_functions:
   - name: reach_exit
