--- a/.registered_environments/gv_crossing.7x7.yaml
+++ b/.registered_environments/gv_crossing.7x7.yaml
@@ -21,7 +21,8 @@ reset_function:
   object_type: Wall
 
 transition_functions:
-  - name: update_agent
+  - name: move_agent
+  - name: turn_agent
 
 reward_functions:
   - name: reach_exit
