--- a/yaml/gv_empty.4x4.yaml
+++ b/yaml/gv_empty.4x4.yaml
@@ -20,7 +20,8 @@ reset_function:
   random_agent: True
 
 transition_functions:
-  - name: update_agent
+  - name: move_agent
+  - name: turn_agent
 
 reward_functions:
   - name: reach_exit
