make tox use dev package versions

--- a/tox.ini
+++ b/tox.ini
@@ -13,22 +13,22 @@ setenv =
     PYTHONPATH = {toxinidir}
 ; fixes pyglet display issue
     DISPLAY = :0
-deps = pytest
+deps = -rrequirements-pytest.txt
 commands = pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-deps = flake8
+deps = -rrequirements-flake8.txt
 commands = flake8 gym_gridverse tests scripts examples
 
 [testenv:mypy]
-deps = mypy
+deps = -rrequirements-mypy.txt
 commands = mypy gym_gridverse tests scripts examples
 
 [testenv:isort]
-deps = isort
+deps = -rrequirements-isort.txt
 commands = isort --check --diff gym_gridverse tests scripts examples
 
 [testenv:black]
-deps = black
+deps = -rrequirements-black.txt
 commands = black --check --diff gym_gridverse tests scripts examples
 
