--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,5 @@ Sphinx==4.4.0
 furo==2022.3.4
 sphinx-autodoc-typehints==1.17.0
 sphinx-theme==1.0
-sphinx_copybutton=0.5.0
+sphinx_copybutton==0.5.0
 sphinxcontrib-napoleon==0.7
